# tltransient

./: ChangeLog.md  LICENSE  README.md  tltransient.cabal  transient-typelevel.cabal
app/: Main.hs  Main2.hs  Main3.hs  Main4.hs
src/: compose.hs
src/Transient/TypeLevel/: Backtrack.hs  Base.hs  EVars.hs  Effects.hs  Indeterminism.hs  Logged.hs  Mailboxes.hs  Move.hs  Parse.hs  Test2.hs  test.hs  test1.hs
src/Transient/TypeLevel/Move/: Utils.hs
test/: compose.hs  tim.hs  unisoneffs.hs
